// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxField should render correctly 1`] = `
<DocumentFragment>
  .cache-5j7jg6-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
}

.cache-5j7jg6-CheckboxContainer .e18zyixk3 {
  cursor: pointer;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk3 {
  cursor: not-allowed;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk4 {
  fill: #e9eaeb;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk4 .e18zyixk6 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2[aria-invalid="true"]:checked+.e18zyixk4 {
  fill: #ffd3e3;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2[aria-invalid="true"]:checked+.e18zyixk4 .e18zyixk6 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2[aria-invalid="true"]+.e18zyixk4 {
  fill: #ffebf2;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2[aria-invalid="true"]+.e18zyixk4 .e18zyixk6 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2:checked+.e18zyixk4 {
  fill: #e5dbfd;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2:checked+.e18zyixk4 .e18zyixk6 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2[aria-checked="mixed"]+.e18zyixk4 {
  fill: #e5dbfd;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2[aria-checked="mixed"]+.e18zyixk4 .e18zyixk6 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.cache-5j7jg6-CheckboxContainer .e18zyixk2:checked+.e18zyixk4 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.cache-5j7jg6-CheckboxContainer .e18zyixk2:checked+.e18zyixk4 .e18zyixk6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.cache-5j7jg6-CheckboxContainer .e18zyixk2[aria-invalid="true"]:checked+.e18zyixk4 .e18zyixk6 {
  fill: #e51963;
  stroke: #e51963;
}

.cache-5j7jg6-CheckboxContainer .e18zyixk2[aria-checked="mixed"]+.e18zyixk4 .e18zyixk5 {
  fill: #ffffff;
}

.cache-5j7jg6-CheckboxContainer .e18zyixk2[aria-checked="mixed"]+.e18zyixk4 .e18zyixk6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.cache-5j7jg6-CheckboxContainer:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='false'][aria-checked='false']+.e18zyixk4 .e18zyixk6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.cache-5j7jg6-CheckboxContainer:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='false'][aria-checked='true']+.e18zyixk4 .e18zyixk6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.cache-5j7jg6-CheckboxContainer:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='false'][aria-checked='mixed']+.e18zyixk4 .e18zyixk6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.cache-5j7jg6-CheckboxContainer:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='true'][aria-checked='false']+.e18zyixk4 .e18zyixk6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-5j7jg6-CheckboxContainer:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='true'][aria-checked='true']+.e18zyixk4 .e18zyixk6 {
  stroke: #d6175c;
  fill: #d6175c;
}

.cache-5j7jg6-CheckboxContainer .e18zyixk2[aria-invalid="true"]+.e18zyixk4 {
  fill: #e51963;
}

.cache-5j7jg6-CheckboxContainer .e18zyixk2[aria-invalid="true"]+.e18zyixk4 .e18zyixk6 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-bd1zro-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-bd1zro-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-bd1zro-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-bd1zro-CheckboxInput:not(:disabled):checked+.e18zyixk4,
.cache-bd1zro-CheckboxInput:not(:disabled)[aria-checked='mixed']+.e18zyixk4 {
  fill: #8c40ef;
}

.cache-bd1zro-CheckboxInput:not(:disabled):checked+.e18zyixk4 .e18zyixk6,
.cache-bd1zro-CheckboxInput:not(:disabled)[aria-checked='mixed']+.e18zyixk4 .e18zyixk6 {
  stroke: #8c40ef;
}

.cache-bd1zro-CheckboxInput:not(:disabled)[aria-invalid='true']+.e18zyixk4,
.cache-bd1zro-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.e18zyixk4 {
  fill: #ffebf2;
}

.cache-bd1zro-CheckboxInput:not(:disabled)[aria-invalid='true']+.e18zyixk4 .e18zyixk6,
.cache-bd1zro-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.e18zyixk4 .e18zyixk6 {
  stroke: #b3144d;
}

.cache-bd1zro-CheckboxInput:focus+.e18zyixk4 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.cache-bd1zro-CheckboxInput:focus+.e18zyixk4 .e18zyixk6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.cache-bd1zro-CheckboxInput[aria-invalid='true']:focus+.e18zyixk4 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.cache-bd1zro-CheckboxInput[aria-invalid='true']:focus+.e18zyixk4 .e18zyixk6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-1acemqq-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1acemqq-StyledIcon path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1t9py5o-InnerCheckbox {
  fill: #ffffff;
  stroke: #d9dadd;
}

.cache-10ivylf-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-17l4vsh-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<form
    novalidate=""
  >
    <div
      aria-disabled="false"
      class="cache-5j7jg6-CheckboxContainer e18zyixk1"
      data-checked="false"
      data-error="false"
    >
      <input
        aria-checked="false"
        aria-invalid="false"
        class="cache-bd1zro-CheckboxInput e18zyixk2"
        id=":r0:"
        name="test"
        type="checkbox"
        value=""
      />
      <svg
        class="cache-1acemqq-StyledIcon e18zyixk4"
        fill="none"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-1t9py5o-InnerCheckbox e18zyixk6"
            height="16"
            rx="2px"
            stroke-width="2"
            width="16"
            x="4"
            y="4"
          />
          <path
            clip-rule="evenodd"
            d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
            fill="white"
            fill-rule="evenodd"
            height="9"
            width="12"
            x="5"
            y="4"
          />
        </g>
      </svg>
      <div
        class="cache-10ivylf-Stack efjor120"
      >
        <div
          class="cache-17l4vsh-Stack efjor120"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`CheckboxField should render correctly checked without value 1`] = `
<DocumentFragment>
  .cache-5j7jg6-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
}

.cache-5j7jg6-CheckboxContainer .e18zyixk3 {
  cursor: pointer;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk3 {
  cursor: not-allowed;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk4 {
  fill: #e9eaeb;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk4 .e18zyixk6 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2[aria-invalid="true"]:checked+.e18zyixk4 {
  fill: #ffd3e3;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2[aria-invalid="true"]:checked+.e18zyixk4 .e18zyixk6 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2[aria-invalid="true"]+.e18zyixk4 {
  fill: #ffebf2;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2[aria-invalid="true"]+.e18zyixk4 .e18zyixk6 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2:checked+.e18zyixk4 {
  fill: #e5dbfd;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2:checked+.e18zyixk4 .e18zyixk6 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2[aria-checked="mixed"]+.e18zyixk4 {
  fill: #e5dbfd;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2[aria-checked="mixed"]+.e18zyixk4 .e18zyixk6 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.cache-5j7jg6-CheckboxContainer .e18zyixk2:checked+.e18zyixk4 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.cache-5j7jg6-CheckboxContainer .e18zyixk2:checked+.e18zyixk4 .e18zyixk6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.cache-5j7jg6-CheckboxContainer .e18zyixk2[aria-invalid="true"]:checked+.e18zyixk4 .e18zyixk6 {
  fill: #e51963;
  stroke: #e51963;
}

.cache-5j7jg6-CheckboxContainer .e18zyixk2[aria-checked="mixed"]+.e18zyixk4 .e18zyixk5 {
  fill: #ffffff;
}

.cache-5j7jg6-CheckboxContainer .e18zyixk2[aria-checked="mixed"]+.e18zyixk4 .e18zyixk6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.cache-5j7jg6-CheckboxContainer:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='false'][aria-checked='false']+.e18zyixk4 .e18zyixk6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.cache-5j7jg6-CheckboxContainer:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='false'][aria-checked='true']+.e18zyixk4 .e18zyixk6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.cache-5j7jg6-CheckboxContainer:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='false'][aria-checked='mixed']+.e18zyixk4 .e18zyixk6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.cache-5j7jg6-CheckboxContainer:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='true'][aria-checked='false']+.e18zyixk4 .e18zyixk6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-5j7jg6-CheckboxContainer:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='true'][aria-checked='true']+.e18zyixk4 .e18zyixk6 {
  stroke: #d6175c;
  fill: #d6175c;
}

.cache-5j7jg6-CheckboxContainer .e18zyixk2[aria-invalid="true"]+.e18zyixk4 {
  fill: #e51963;
}

.cache-5j7jg6-CheckboxContainer .e18zyixk2[aria-invalid="true"]+.e18zyixk4 .e18zyixk6 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-bd1zro-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-bd1zro-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-bd1zro-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-bd1zro-CheckboxInput:not(:disabled):checked+.e18zyixk4,
.cache-bd1zro-CheckboxInput:not(:disabled)[aria-checked='mixed']+.e18zyixk4 {
  fill: #8c40ef;
}

.cache-bd1zro-CheckboxInput:not(:disabled):checked+.e18zyixk4 .e18zyixk6,
.cache-bd1zro-CheckboxInput:not(:disabled)[aria-checked='mixed']+.e18zyixk4 .e18zyixk6 {
  stroke: #8c40ef;
}

.cache-bd1zro-CheckboxInput:not(:disabled)[aria-invalid='true']+.e18zyixk4,
.cache-bd1zro-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.e18zyixk4 {
  fill: #ffebf2;
}

.cache-bd1zro-CheckboxInput:not(:disabled)[aria-invalid='true']+.e18zyixk4 .e18zyixk6,
.cache-bd1zro-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.e18zyixk4 .e18zyixk6 {
  stroke: #b3144d;
}

.cache-bd1zro-CheckboxInput:focus+.e18zyixk4 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.cache-bd1zro-CheckboxInput:focus+.e18zyixk4 .e18zyixk6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.cache-bd1zro-CheckboxInput[aria-invalid='true']:focus+.e18zyixk4 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.cache-bd1zro-CheckboxInput[aria-invalid='true']:focus+.e18zyixk4 .e18zyixk6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-1acemqq-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1acemqq-StyledIcon path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1t9py5o-InnerCheckbox {
  fill: #ffffff;
  stroke: #d9dadd;
}

.cache-10ivylf-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-17l4vsh-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<form
    novalidate=""
  >
    <div
      aria-disabled="false"
      class="cache-5j7jg6-CheckboxContainer e18zyixk1"
      data-checked="true"
      data-error="false"
    >
      <input
        aria-checked="true"
        aria-invalid="false"
        checked=""
        class="cache-bd1zro-CheckboxInput e18zyixk2"
        id=":r4:"
        name="checked"
        type="checkbox"
        value=""
      />
      <svg
        class="cache-1acemqq-StyledIcon e18zyixk4"
        fill="none"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-1t9py5o-InnerCheckbox e18zyixk6"
            height="16"
            rx="2px"
            stroke-width="2"
            width="16"
            x="4"
            y="4"
          />
          <path
            clip-rule="evenodd"
            d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
            fill="white"
            fill-rule="evenodd"
            height="9"
            width="12"
            x="5"
            y="4"
          />
        </g>
      </svg>
      <div
        class="cache-10ivylf-Stack efjor120"
      >
        <div
          class="cache-17l4vsh-Stack efjor120"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`CheckboxField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-5j7jg6-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
}

.cache-5j7jg6-CheckboxContainer .e18zyixk3 {
  cursor: pointer;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk3 {
  cursor: not-allowed;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk4 {
  fill: #e9eaeb;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk4 .e18zyixk6 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2[aria-invalid="true"]:checked+.e18zyixk4 {
  fill: #ffd3e3;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2[aria-invalid="true"]:checked+.e18zyixk4 .e18zyixk6 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2[aria-invalid="true"]+.e18zyixk4 {
  fill: #ffebf2;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2[aria-invalid="true"]+.e18zyixk4 .e18zyixk6 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2:checked+.e18zyixk4 {
  fill: #e5dbfd;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2:checked+.e18zyixk4 .e18zyixk6 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2[aria-checked="mixed"]+.e18zyixk4 {
  fill: #e5dbfd;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2[aria-checked="mixed"]+.e18zyixk4 .e18zyixk6 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.cache-5j7jg6-CheckboxContainer .e18zyixk2:checked+.e18zyixk4 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.cache-5j7jg6-CheckboxContainer .e18zyixk2:checked+.e18zyixk4 .e18zyixk6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.cache-5j7jg6-CheckboxContainer .e18zyixk2[aria-invalid="true"]:checked+.e18zyixk4 .e18zyixk6 {
  fill: #e51963;
  stroke: #e51963;
}

.cache-5j7jg6-CheckboxContainer .e18zyixk2[aria-checked="mixed"]+.e18zyixk4 .e18zyixk5 {
  fill: #ffffff;
}

.cache-5j7jg6-CheckboxContainer .e18zyixk2[aria-checked="mixed"]+.e18zyixk4 .e18zyixk6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.cache-5j7jg6-CheckboxContainer:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='false'][aria-checked='false']+.e18zyixk4 .e18zyixk6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.cache-5j7jg6-CheckboxContainer:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='false'][aria-checked='true']+.e18zyixk4 .e18zyixk6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.cache-5j7jg6-CheckboxContainer:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='false'][aria-checked='mixed']+.e18zyixk4 .e18zyixk6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.cache-5j7jg6-CheckboxContainer:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='true'][aria-checked='false']+.e18zyixk4 .e18zyixk6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-5j7jg6-CheckboxContainer:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='true'][aria-checked='true']+.e18zyixk4 .e18zyixk6 {
  stroke: #d6175c;
  fill: #d6175c;
}

.cache-5j7jg6-CheckboxContainer .e18zyixk2[aria-invalid="true"]+.e18zyixk4 {
  fill: #e51963;
}

.cache-5j7jg6-CheckboxContainer .e18zyixk2[aria-invalid="true"]+.e18zyixk4 .e18zyixk6 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-bd1zro-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-bd1zro-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-bd1zro-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-bd1zro-CheckboxInput:not(:disabled):checked+.e18zyixk4,
.cache-bd1zro-CheckboxInput:not(:disabled)[aria-checked='mixed']+.e18zyixk4 {
  fill: #8c40ef;
}

.cache-bd1zro-CheckboxInput:not(:disabled):checked+.e18zyixk4 .e18zyixk6,
.cache-bd1zro-CheckboxInput:not(:disabled)[aria-checked='mixed']+.e18zyixk4 .e18zyixk6 {
  stroke: #8c40ef;
}

.cache-bd1zro-CheckboxInput:not(:disabled)[aria-invalid='true']+.e18zyixk4,
.cache-bd1zro-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.e18zyixk4 {
  fill: #ffebf2;
}

.cache-bd1zro-CheckboxInput:not(:disabled)[aria-invalid='true']+.e18zyixk4 .e18zyixk6,
.cache-bd1zro-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.e18zyixk4 .e18zyixk6 {
  stroke: #b3144d;
}

.cache-bd1zro-CheckboxInput:focus+.e18zyixk4 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.cache-bd1zro-CheckboxInput:focus+.e18zyixk4 .e18zyixk6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.cache-bd1zro-CheckboxInput[aria-invalid='true']:focus+.e18zyixk4 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.cache-bd1zro-CheckboxInput[aria-invalid='true']:focus+.e18zyixk4 .e18zyixk6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-1acemqq-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1acemqq-StyledIcon path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1t9py5o-InnerCheckbox {
  fill: #ffffff;
  stroke: #d9dadd;
}

.cache-10ivylf-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-17l4vsh-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<form
    novalidate=""
  >
    <div
      aria-disabled="true"
      class="cache-5j7jg6-CheckboxContainer e18zyixk1"
      data-checked="false"
      data-error="false"
    >
      <input
        aria-checked="false"
        aria-invalid="false"
        class="cache-bd1zro-CheckboxInput e18zyixk2"
        disabled=""
        id=":r2:"
        name="test"
        type="checkbox"
        value=""
      />
      <svg
        class="cache-1acemqq-StyledIcon e18zyixk4"
        fill="none"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-1t9py5o-InnerCheckbox e18zyixk6"
            height="16"
            rx="2px"
            stroke-width="2"
            width="16"
            x="4"
            y="4"
          />
          <path
            clip-rule="evenodd"
            d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
            fill="white"
            fill-rule="evenodd"
            height="9"
            width="12"
            x="5"
            y="4"
          />
        </g>
      </svg>
      <div
        class="cache-10ivylf-Stack efjor120"
      >
        <div
          class="cache-17l4vsh-Stack efjor120"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`CheckboxField should render correctly not checked without value 1`] = `
<DocumentFragment>
  .cache-5j7jg6-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
}

.cache-5j7jg6-CheckboxContainer .e18zyixk3 {
  cursor: pointer;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk3 {
  cursor: not-allowed;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk4 {
  fill: #e9eaeb;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk4 .e18zyixk6 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2[aria-invalid="true"]:checked+.e18zyixk4 {
  fill: #ffd3e3;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2[aria-invalid="true"]:checked+.e18zyixk4 .e18zyixk6 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2[aria-invalid="true"]+.e18zyixk4 {
  fill: #ffebf2;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2[aria-invalid="true"]+.e18zyixk4 .e18zyixk6 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2:checked+.e18zyixk4 {
  fill: #e5dbfd;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2:checked+.e18zyixk4 .e18zyixk6 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2[aria-checked="mixed"]+.e18zyixk4 {
  fill: #e5dbfd;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2[aria-checked="mixed"]+.e18zyixk4 .e18zyixk6 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.cache-5j7jg6-CheckboxContainer .e18zyixk2:checked+.e18zyixk4 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.cache-5j7jg6-CheckboxContainer .e18zyixk2:checked+.e18zyixk4 .e18zyixk6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.cache-5j7jg6-CheckboxContainer .e18zyixk2[aria-invalid="true"]:checked+.e18zyixk4 .e18zyixk6 {
  fill: #e51963;
  stroke: #e51963;
}

.cache-5j7jg6-CheckboxContainer .e18zyixk2[aria-checked="mixed"]+.e18zyixk4 .e18zyixk5 {
  fill: #ffffff;
}

.cache-5j7jg6-CheckboxContainer .e18zyixk2[aria-checked="mixed"]+.e18zyixk4 .e18zyixk6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.cache-5j7jg6-CheckboxContainer:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='false'][aria-checked='false']+.e18zyixk4 .e18zyixk6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.cache-5j7jg6-CheckboxContainer:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='false'][aria-checked='true']+.e18zyixk4 .e18zyixk6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.cache-5j7jg6-CheckboxContainer:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='false'][aria-checked='mixed']+.e18zyixk4 .e18zyixk6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.cache-5j7jg6-CheckboxContainer:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='true'][aria-checked='false']+.e18zyixk4 .e18zyixk6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-5j7jg6-CheckboxContainer:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='true'][aria-checked='true']+.e18zyixk4 .e18zyixk6 {
  stroke: #d6175c;
  fill: #d6175c;
}

.cache-5j7jg6-CheckboxContainer .e18zyixk2[aria-invalid="true"]+.e18zyixk4 {
  fill: #e51963;
}

.cache-5j7jg6-CheckboxContainer .e18zyixk2[aria-invalid="true"]+.e18zyixk4 .e18zyixk6 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-bd1zro-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-bd1zro-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-bd1zro-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-bd1zro-CheckboxInput:not(:disabled):checked+.e18zyixk4,
.cache-bd1zro-CheckboxInput:not(:disabled)[aria-checked='mixed']+.e18zyixk4 {
  fill: #8c40ef;
}

.cache-bd1zro-CheckboxInput:not(:disabled):checked+.e18zyixk4 .e18zyixk6,
.cache-bd1zro-CheckboxInput:not(:disabled)[aria-checked='mixed']+.e18zyixk4 .e18zyixk6 {
  stroke: #8c40ef;
}

.cache-bd1zro-CheckboxInput:not(:disabled)[aria-invalid='true']+.e18zyixk4,
.cache-bd1zro-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.e18zyixk4 {
  fill: #ffebf2;
}

.cache-bd1zro-CheckboxInput:not(:disabled)[aria-invalid='true']+.e18zyixk4 .e18zyixk6,
.cache-bd1zro-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.e18zyixk4 .e18zyixk6 {
  stroke: #b3144d;
}

.cache-bd1zro-CheckboxInput:focus+.e18zyixk4 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.cache-bd1zro-CheckboxInput:focus+.e18zyixk4 .e18zyixk6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.cache-bd1zro-CheckboxInput[aria-invalid='true']:focus+.e18zyixk4 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.cache-bd1zro-CheckboxInput[aria-invalid='true']:focus+.e18zyixk4 .e18zyixk6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-1acemqq-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1acemqq-StyledIcon path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1t9py5o-InnerCheckbox {
  fill: #ffffff;
  stroke: #d9dadd;
}

.cache-10ivylf-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-17l4vsh-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<form
    novalidate=""
  >
    <div
      aria-disabled="false"
      class="cache-5j7jg6-CheckboxContainer e18zyixk1"
      data-checked="false"
      data-error="false"
    >
      <input
        aria-checked="false"
        aria-invalid="false"
        class="cache-bd1zro-CheckboxInput e18zyixk2"
        id=":r6:"
        name="checked"
        type="checkbox"
        value=""
      />
      <svg
        class="cache-1acemqq-StyledIcon e18zyixk4"
        fill="none"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-1t9py5o-InnerCheckbox e18zyixk6"
            height="16"
            rx="2px"
            stroke-width="2"
            width="16"
            x="4"
            y="4"
          />
          <path
            clip-rule="evenodd"
            d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
            fill="white"
            fill-rule="evenodd"
            height="9"
            width="12"
            x="5"
            y="4"
          />
        </g>
      </svg>
      <div
        class="cache-10ivylf-Stack efjor120"
      >
        <div
          class="cache-17l4vsh-Stack efjor120"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`CheckboxField should render correctly with errors 1`] = `
<DocumentFragment>
  .cache-5j7jg6-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
}

.cache-5j7jg6-CheckboxContainer .e18zyixk3 {
  cursor: pointer;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk3 {
  cursor: not-allowed;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk4 {
  fill: #e9eaeb;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk4 .e18zyixk6 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2[aria-invalid="true"]:checked+.e18zyixk4 {
  fill: #ffd3e3;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2[aria-invalid="true"]:checked+.e18zyixk4 .e18zyixk6 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2[aria-invalid="true"]+.e18zyixk4 {
  fill: #ffebf2;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2[aria-invalid="true"]+.e18zyixk4 .e18zyixk6 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2:checked+.e18zyixk4 {
  fill: #e5dbfd;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2:checked+.e18zyixk4 .e18zyixk6 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2[aria-checked="mixed"]+.e18zyixk4 {
  fill: #e5dbfd;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2[aria-checked="mixed"]+.e18zyixk4 .e18zyixk6 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.cache-5j7jg6-CheckboxContainer .e18zyixk2:checked+.e18zyixk4 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.cache-5j7jg6-CheckboxContainer .e18zyixk2:checked+.e18zyixk4 .e18zyixk6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.cache-5j7jg6-CheckboxContainer .e18zyixk2[aria-invalid="true"]:checked+.e18zyixk4 .e18zyixk6 {
  fill: #e51963;
  stroke: #e51963;
}

.cache-5j7jg6-CheckboxContainer .e18zyixk2[aria-checked="mixed"]+.e18zyixk4 .e18zyixk5 {
  fill: #ffffff;
}

.cache-5j7jg6-CheckboxContainer .e18zyixk2[aria-checked="mixed"]+.e18zyixk4 .e18zyixk6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.cache-5j7jg6-CheckboxContainer:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='false'][aria-checked='false']+.e18zyixk4 .e18zyixk6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.cache-5j7jg6-CheckboxContainer:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='false'][aria-checked='true']+.e18zyixk4 .e18zyixk6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.cache-5j7jg6-CheckboxContainer:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='false'][aria-checked='mixed']+.e18zyixk4 .e18zyixk6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.cache-5j7jg6-CheckboxContainer:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='true'][aria-checked='false']+.e18zyixk4 .e18zyixk6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-5j7jg6-CheckboxContainer:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='true'][aria-checked='true']+.e18zyixk4 .e18zyixk6 {
  stroke: #d6175c;
  fill: #d6175c;
}

.cache-5j7jg6-CheckboxContainer .e18zyixk2[aria-invalid="true"]+.e18zyixk4 {
  fill: #e51963;
}

.cache-5j7jg6-CheckboxContainer .e18zyixk2[aria-invalid="true"]+.e18zyixk4 .e18zyixk6 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-bd1zro-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-bd1zro-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-bd1zro-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-bd1zro-CheckboxInput:not(:disabled):checked+.e18zyixk4,
.cache-bd1zro-CheckboxInput:not(:disabled)[aria-checked='mixed']+.e18zyixk4 {
  fill: #8c40ef;
}

.cache-bd1zro-CheckboxInput:not(:disabled):checked+.e18zyixk4 .e18zyixk6,
.cache-bd1zro-CheckboxInput:not(:disabled)[aria-checked='mixed']+.e18zyixk4 .e18zyixk6 {
  stroke: #8c40ef;
}

.cache-bd1zro-CheckboxInput:not(:disabled)[aria-invalid='true']+.e18zyixk4,
.cache-bd1zro-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.e18zyixk4 {
  fill: #ffebf2;
}

.cache-bd1zro-CheckboxInput:not(:disabled)[aria-invalid='true']+.e18zyixk4 .e18zyixk6,
.cache-bd1zro-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.e18zyixk4 .e18zyixk6 {
  stroke: #b3144d;
}

.cache-bd1zro-CheckboxInput:focus+.e18zyixk4 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.cache-bd1zro-CheckboxInput:focus+.e18zyixk4 .e18zyixk6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.cache-bd1zro-CheckboxInput[aria-invalid='true']:focus+.e18zyixk4 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.cache-bd1zro-CheckboxInput[aria-invalid='true']:focus+.e18zyixk4 .e18zyixk6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-1acemqq-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1acemqq-StyledIcon path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1t9py5o-InnerCheckbox {
  fill: #ffffff;
  stroke: #d9dadd;
}

.cache-10ivylf-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-17l4vsh-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-9k0c1e-StyledLabel {
  width: 100%;
}

.cache-3cgt5r-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: #b3144d;
  height: 10px;
  width: 10px;
  min-width: 10px;
  min-height: 10px;
}

.cache-3cgt5r-StyledIcon-sizeStyles .fillStroke {
  stroke: #b3144d;
  fill: none;
}

.cache-1f5u2re-StyledText-ErrorText {
  color: #b3144d;
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding-top: 4px;
}

<form
    novalidate=""
  >
    <div
      aria-disabled="false"
      class="cache-5j7jg6-CheckboxContainer e18zyixk1"
      data-checked="false"
      data-error="true"
    >
      <input
        aria-checked="false"
        aria-describedby=":ra:-hint"
        aria-invalid="true"
        class="cache-bd1zro-CheckboxInput e18zyixk2"
        id=":ra:"
        name="test"
        required=""
        type="checkbox"
        value=""
      />
      <svg
        class="cache-1acemqq-StyledIcon e18zyixk4"
        fill="none"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-1t9py5o-InnerCheckbox e18zyixk6"
            height="16"
            rx="2px"
            stroke-width="2"
            width="16"
            x="4"
            y="4"
          />
          <path
            clip-rule="evenodd"
            d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
            fill="white"
            fill-rule="evenodd"
            height="9"
            width="12"
            x="5"
            y="4"
          />
        </g>
      </svg>
      <div
        class="cache-10ivylf-Stack efjor120"
      >
        <div
          class="cache-17l4vsh-Stack efjor120"
        >
          <label
            class="cache-9k0c1e-StyledLabel e18zyixk3"
            for=":ra:"
          >
            Checkbox field error
          </label>
          <sup>
            <svg
              class="cache-3cgt5r-StyledIcon-sizeStyles e17h3kg70"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 2h4l-.79 7.91 6.45-4.64 2 3.46L14.42 12l7.24 3.27-2 3.46-6.45-4.64L14 22h-4l.79-7.91-6.45 4.64-2-3.46L9.58 12 2.34 8.73l2-3.46 6.45 4.64z"
              />
            </svg>
          </sup>
        </div>
        <span
          class="e18zyixk7 cache-1f5u2re-StyledText-ErrorText ewwvy070"
        >
          This field is required
        </span>
      </div>
    </div>
    <div>
      Focus
    </div>
  </form>
</DocumentFragment>
`;

exports[`CheckboxField should trigger events correctly 1`] = `
<DocumentFragment>
  .cache-5j7jg6-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
}

.cache-5j7jg6-CheckboxContainer .e18zyixk3 {
  cursor: pointer;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk3 {
  cursor: not-allowed;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk4 {
  fill: #e9eaeb;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk4 .e18zyixk6 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2[aria-invalid="true"]:checked+.e18zyixk4 {
  fill: #ffd3e3;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2[aria-invalid="true"]:checked+.e18zyixk4 .e18zyixk6 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2[aria-invalid="true"]+.e18zyixk4 {
  fill: #ffebf2;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2[aria-invalid="true"]+.e18zyixk4 .e18zyixk6 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2:checked+.e18zyixk4 {
  fill: #e5dbfd;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2:checked+.e18zyixk4 .e18zyixk6 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2[aria-checked="mixed"]+.e18zyixk4 {
  fill: #e5dbfd;
}

.cache-5j7jg6-CheckboxContainer[aria-disabled='true'] .e18zyixk2[aria-checked="mixed"]+.e18zyixk4 .e18zyixk6 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.cache-5j7jg6-CheckboxContainer .e18zyixk2:checked+.e18zyixk4 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.cache-5j7jg6-CheckboxContainer .e18zyixk2:checked+.e18zyixk4 .e18zyixk6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.cache-5j7jg6-CheckboxContainer .e18zyixk2[aria-invalid="true"]:checked+.e18zyixk4 .e18zyixk6 {
  fill: #e51963;
  stroke: #e51963;
}

.cache-5j7jg6-CheckboxContainer .e18zyixk2[aria-checked="mixed"]+.e18zyixk4 .e18zyixk5 {
  fill: #ffffff;
}

.cache-5j7jg6-CheckboxContainer .e18zyixk2[aria-checked="mixed"]+.e18zyixk4 .e18zyixk6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.cache-5j7jg6-CheckboxContainer:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='false'][aria-checked='false']+.e18zyixk4 .e18zyixk6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.cache-5j7jg6-CheckboxContainer:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='false'][aria-checked='true']+.e18zyixk4 .e18zyixk6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.cache-5j7jg6-CheckboxContainer:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='false'][aria-checked='mixed']+.e18zyixk4 .e18zyixk6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.cache-5j7jg6-CheckboxContainer:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='true'][aria-checked='false']+.e18zyixk4 .e18zyixk6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-5j7jg6-CheckboxContainer:hover[aria-disabled='false'] .e18zyixk2[aria-invalid='true'][aria-checked='true']+.e18zyixk4 .e18zyixk6 {
  stroke: #d6175c;
  fill: #d6175c;
}

.cache-5j7jg6-CheckboxContainer .e18zyixk2[aria-invalid="true"]+.e18zyixk4 {
  fill: #e51963;
}

.cache-5j7jg6-CheckboxContainer .e18zyixk2[aria-invalid="true"]+.e18zyixk4 .e18zyixk6 {
  stroke: #e51963;
  fill: #ffebf2;
}

.cache-bd1zro-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-bd1zro-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-bd1zro-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-bd1zro-CheckboxInput:not(:disabled):checked+.e18zyixk4,
.cache-bd1zro-CheckboxInput:not(:disabled)[aria-checked='mixed']+.e18zyixk4 {
  fill: #8c40ef;
}

.cache-bd1zro-CheckboxInput:not(:disabled):checked+.e18zyixk4 .e18zyixk6,
.cache-bd1zro-CheckboxInput:not(:disabled)[aria-checked='mixed']+.e18zyixk4 .e18zyixk6 {
  stroke: #8c40ef;
}

.cache-bd1zro-CheckboxInput:not(:disabled)[aria-invalid='true']+.e18zyixk4,
.cache-bd1zro-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.e18zyixk4 {
  fill: #ffebf2;
}

.cache-bd1zro-CheckboxInput:not(:disabled)[aria-invalid='true']+.e18zyixk4 .e18zyixk6,
.cache-bd1zro-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.e18zyixk4 .e18zyixk6 {
  stroke: #b3144d;
}

.cache-bd1zro-CheckboxInput:focus+.e18zyixk4 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.cache-bd1zro-CheckboxInput:focus+.e18zyixk4 .e18zyixk6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.cache-bd1zro-CheckboxInput[aria-invalid='true']:focus+.e18zyixk4 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.cache-bd1zro-CheckboxInput[aria-invalid='true']:focus+.e18zyixk4 .e18zyixk6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.cache-1acemqq-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-1acemqq-StyledIcon path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-1t9py5o-InnerCheckbox {
  fill: #ffffff;
  stroke: #d9dadd;
}

.cache-10ivylf-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-17l4vsh-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.cache-9k0c1e-StyledLabel {
  width: 100%;
}

<form
    novalidate=""
  >
    <div
      aria-disabled="false"
      class="cache-5j7jg6-CheckboxContainer e18zyixk1"
      data-checked="true"
      data-error="false"
    >
      <input
        aria-checked="true"
        aria-invalid="false"
        class="cache-bd1zro-CheckboxInput e18zyixk2"
        id=":r8:"
        name="test"
        type="checkbox"
        value=""
      />
      <svg
        class="cache-1acemqq-StyledIcon e18zyixk4"
        fill="none"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-1t9py5o-InnerCheckbox e18zyixk6"
            height="16"
            rx="2px"
            stroke-width="2"
            width="16"
            x="4"
            y="4"
          />
          <path
            clip-rule="evenodd"
            d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
            fill="white"
            fill-rule="evenodd"
            height="9"
            width="12"
            x="5"
            y="4"
          />
        </g>
      </svg>
      <div
        class="cache-10ivylf-Stack efjor120"
      >
        <div
          class="cache-17l4vsh-Stack efjor120"
        >
          <label
            class="cache-9k0c1e-StyledLabel e18zyixk3"
            for=":r8:"
          >
            Checkbox field events
          </label>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
